--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/zloirock/core-js.git"
   },
   "main": "index.js",
+  "typings": "package.d.ts",
   "devDependencies": {
     "webpack": "1.8.x",
     "LiveScript": "1.3.x",
